--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Just Fall</title>
+    <title>Classes</title>    
+    <link rel="icon" href="classroomcloak.png">
     <script>
       Object.defineProperty(document, "URL", {
         get() {
@@ -15,7 +16,7 @@
 		<script src="/js/main.js"></script>
     <!-- Rise SDK -->
     <script src="hb.loader.js"></script>
-    <link rel="shortcut icon" type="image/png" href="favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="classroomcloak.png" />
     <meta name="description" content="Play the fun Fall Ultimate Knockout Guys game directly from your PC without download, just in your browser! Try out the penguin hexagon Fall Multiplayer Game from the Guys of JustFall.LOL" />
     <link rel="canonical" href="https://justfall.lol/" />
     <meta property="og:title" content="JustFall.LOL" />
